[package]
name = "mapsvg"
version = "0.1.0"
authors = ["mthh <>"]

[dependencies]
svg = "^0.5"
geojson = "^0.8"
clap = "^2.26"
toml = "^0.4"
# proj = { git = "https://github.com/mthh/rust-proj", branch = "withoutgeo" }
proj = { path = "/home/mz/code_rust/rust-proj"}
colorbrewer = "0.1.0"
classif = "0.0.2"
# geo ="0.4.2"
